
[project]
name = "nn-tilde"
version = "2025.0.0"
dependencies = [
  # "torch==2.5",
  "cached_conv>=2.5.0",
  "torch==2.5.0",
  # "numpy",
  # "torchaudio", 
  # "torchvision==2.5.1"
  # "torchvision"
]
requires-python = ">=3.11"
# requires-python = "==3.12.11"
authors = [
  {name = "Antoine CAILLON"},
  {name = "Axel CHEMLA--ROMEU-SANTOS"},
]
